Formatting issues, placeholders, and new merch for Shih Zoo!

--- a/contact.html
+++ b/contact.html
@@ -19,14 +19,14 @@
             </div>
             <div class="menu">
                 <ul class="menu_list">
-                    <li><a href="index.html">PLAY SHIH ZOO</a></li>
-                    <li><a href="home.html">HOME</a></li>
-                    <li><a href="sponsor.html">SPONSOR</a></li>
-                    <li><a href="investor.html">INVESTOR</a></li>
-                    <li><a href="partner.html">PARTNER</a></li>
-                    <li><a href="#">MERCHANDISE</a></li>
-                    <li><a href="careers.html">CAREERS</a></li>
-                    <li><a href="contact.html">CONTACT US</a></li>
+                    <li><a href="index.html">PLAY SHIH ZOO</a></li><br>
+                    <li><a href="home.html">HOME</a></li><br>
+                    <li><a href="sponsor.html">SPONSOR</a></li><br>
+                    <li><a href="investor.html">INVESTOR</a></li><br>
+                    <li><a href="partner.html">PARTNER</a></li><br>
+                    <li><a href="#">MERCHANDISE</a></li><br>
+                    <li><a href="careers.html">CAREERS</a></li><br>
+                    <li><a href="contact.html">CONTACT US</a></li><br>
                 </ul>
             </div>
         </header>
@@ -43,6 +43,8 @@
                     </p>
                     <a href="#"><p class="icons"><i class="lni lni-twitter"></i></p></a>
                     <a href="#"><p class="icons"><i class="lni lni-facebook"></i></p></a>
+                    <a href="#"><p class="icons"><i class="lni lni-tiktok-alt"></i></p></a>
+                    <a href="#"><p class="icons"><i class="lni lni-instagram"></i></p></a>
                     <a href="#"><p class="icons"><i class="lni lni-youtube"></i></p></a>
                     <a href="#"><p class="icons"><i class="lni lni-linkedin"></i></p></a>
                 </div>
