--- a/home.html
+++ b/home.html
@@ -19,14 +19,14 @@
             </div>
             <div class="menu">
                 <ul class="menu_list">
-                    <li><a href="index.html">PLAY SHIH ZOO</a></li>
-                    <li><a href="home.html">HOME</a></li>
-                    <li><a href="sponsor.html">SPONSOR</a></li>
-                    <li><a href="investor.html">INVESTOR</a></li>
-                    <li><a href="partner.html">PARTNER</a></li>
-                    <li><a href="#">MERCHANDISE</a></li>
-                    <li><a href="careers.html">CAREERS</a></li>
-                    <li><a href="contact.html">CONTACT US</a></li>
+                    <li><a href="index.html">PLAY SHIH ZOO</a></li><br>
+                    <li><a href="home.html">HOME</a></li><br>
+                    <li><a href="sponsor.html">SPONSOR</a></li><br>
+                    <li><a href="investor.html">INVESTOR</a></li><br>
+                    <li><a href="partner.html">PARTNER</a></li><br>
+                    <li><a href="#">MERCHANDISE</a></li><br>
+                    <li><a href="careers.html">CAREERS</a></li><br>
+                    <li><a href="contact.html">CONTACT US</a></li><br>
                 </ul>
             </div>
         </header>
@@ -51,20 +51,20 @@
                     <div class="team_section">
                         <p class="section_titles">Who are we?</p>
                         <div class="people">
-                            <img class="people_images" id="ceo" src="assets/charles_conlan.png" alt="Charles J. Conlan">
-                            <div class="ceo_information">
-                            <p class="name_titles" id="ceo_name">CEO Charles J. Conlan</p>
-                            <p class="section_information" id="ceo_information">
-                                Hey there! With a background rooted in game design at Champlain College, I've honed my skills in crafting immersive and engaging digital experiences. My journey began with a passion for merging creativity with technology, shaping me into a visionary leader within the interactive entertainment industry. At Shameless Product Placement, we innovate by seamlessly integrating branded content into gaming narratives, redefining how companies connect with audiences in the digital age. Our mission is to pioneer new frontiers in marketing while delivering compelling gameplay that resonates with players worldwide. Join us as we revolutionize the intersection of gaming and advertising, setting new standards for interactive storytelling.
-                            </p>
+                            <img class="people_images" id="founder" src="assets/charles_conlan.png" alt="Charles J. Conlan">
+                            <div class="founder_information">
+                                <p class="name_titles" id="founder_name">Founder Charles J. Conlan</p>
+                                <p class="section_information" id="founder_information">
+                                    Insert paragraph written by Charles J. Conlan here!
+                                </p>
                             </div>
                         </div>
                         <div class="people">
-                            <img class="people_images" id="marketer" src="assets/joe_conlan.png" alt="Joe Conlan">
-                            <div class="marketer_information">
-                                <p class="name_titles" id="marketer_name">Joe Conlan</p>
-                                <p class="section_information" id="game_developer_information">
-                                    Hey there, I'm Joe Conlan, a marketer here at Shameless Product Placement. Armed with a passion for gaming and a knack for coding, I'm part of a talented team dedicated to creating innovative and captivating digital experiences. My journey into game development started with a fascination for how technology can bring stories to life and evolved through hands-on experience at leading studios. At Shameless, I thrive on integrating engaging gameplay mechanics with strategic brand placements, ensuring our games not only entertain but also resonate with diverse audiences. Collaborating closely with designers and marketers, I contribute to crafting seamless narratives that seamlessly blend entertainment with promotional content, pushing the boundaries of interactive advertising. Join us in exploring the limitless possibilities at the intersection of gaming and marketing!
+                            <img class="people_images" id="business_advisor" src="assets/joe_conlan.png" alt="Joe Conlan">
+                            <div class="business_advisor_information">
+                                <p class="name_titles" id="business_advisor_name">Business Advisor Joe Conlan</p>
+                                <p class="section_information" id="business_advisor_information">
+                                    Insert paragraph written by Joe Conlan here! We will add more staff members below depending on if they want to be on the site or not!
                                 </p>
                             </div>
                         </div>
