--- a/index.html
+++ b/index.html
@@ -18,20 +18,23 @@
             </div>
             <div class="menu">
                 <ul class="menu_list">
-                    <li><a href="index.html">PLAY SHIH ZOO</a></li>
-                    <li><a href="home.html">HOME</a></li>
-                    <li><a href="sponsor.html">SPONSOR</a></li>
-                    <li><a href="investor.html">INVESTOR</a></li>
-                    <li><a href="partner.html">PARTNER</a></li>
-                    <li><a href="#">MERCHANDISE</a></li>
-                    <li><a href="careers.html">CAREERS</a></li>
-                    <li><a href="contact.html">CONTACT US</a></li>
+                    <li><a href="index.html">PLAY SHIH ZOO</a></li><br>
+                    <li><a href="home.html">HOME</a></li><br>
+                    <li><a href="sponsor.html">SPONSOR</a></li><br>
+                    <li><a href="investor.html">INVESTOR</a></li><br>
+                    <li><a href="partner.html">PARTNER</a></li><br>
+                    <li><a href="#">MERCHANDISE</a></li><br>
+                    <li><a href="careers.html">CAREERS</a></li><br>
+                    <li><a href="contact.html">CONTACT US</a></li><br>
                 </ul>
             </div>
         </header>
         <div class="content">
             <a href="index.html">
                 <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
+            </a>
+            <a href="#">
+                <img id="shih_zoo_merchandise" src="assets/shih_zoo_merchandise_icon.png" alt="Shih Zoo Merchandise">
             </a>
             <img id="shih_tzu" src="assets/shih_tzu.png" alt="Shih Tzu">
             <img id="shih_zoo_logo" src="assets/shih_zoo_logo.png" alt="Shih Zoo Logo">
