--- a/investor.html
+++ b/investor.html
@@ -19,14 +19,14 @@
             </div>
             <div class="menu">
                 <ul class="menu_list">
-                    <li><a href="index.html">PLAY SHIH ZOO</a></li>
-                    <li><a href="home.html">HOME</a></li>
-                    <li><a href="sponsor.html">SPONSOR</a></li>
-                    <li><a href="investor.html">INVESTOR</a></li>
-                    <li><a href="partner.html">PARTNER</a></li>
-                    <li><a href="#">MERCHANDISE</a></li>
-                    <li><a href="careers.html">CAREERS</a></li>
-                    <li><a href="contact.html">CONTACT US</a></li>
+                    <li><a href="index.html">PLAY SHIH ZOO</a></li><br>
+                    <li><a href="home.html">HOME</a></li><br>
+                    <li><a href="sponsor.html">SPONSOR</a></li><br>
+                    <li><a href="investor.html">INVESTOR</a></li><br>
+                    <li><a href="partner.html">PARTNER</a></li><br>
+                    <li><a href="#">MERCHANDISE</a></li><br>
+                    <li><a href="careers.html">CAREERS</a></li><br>
+                    <li><a href="contact.html">CONTACT US</a></li><br>
                 </ul>
             </div>
         </header>
@@ -49,19 +49,6 @@
                 </div>
             </div>
             <div class="extra_investment_information">
-                <p id="title">OUR STORY</p>
-                <div class="team_section">
-                    <p class="section_titles">Who are we?</p>
-                    <div class="people">
-                        <img id="ceo" src="assets/charles_conlan.png" alt="Charles J. Conlan">
-                        <div class="ceo_information">
-                            <p class="name_titles" id="ceo_name">CEO Charles J. Conlan</p>
-                            <p class="section_information" id="ceo_information">
-                                Hey there! With a background rooted in game design at Champlain College, I've honed my skills in crafting immersive and engaging digital experiences. My journey began with a passion for merging creativity with technology, shaping me into a visionary leader within the interactive entertainment industry. At Shameless Product Placement, we innovate by seamlessly integrating branded content into gaming narratives, redefining how companies connect with audiences in the digital age. Our mission is to pioneer new frontiers in marketing while delivering compelling gameplay that resonates with players worldwide. Join us as we revolutionize the intersection of gaming and advertising, setting new standards for interactive storytelling.
-                            </p>
-                        </div>
-                    </div>
-                </div>
                 <div class="faq_section">
                     <p class="section_titles">Frequently Asked Questions</p>
                     <p class="questions">Why should I invest in Shameless Product Placement?</p>
