--- a/contact.html
+++ b/contact.html
@@ -41,12 +41,11 @@
                         <i class="lni lni-pin"></i> 280 South Winooski Avenue<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Burlington, VT 05401
                     </p>
-                    <a href="#"><p class="icons"><i class="lni lni-twitter"></i></p></a>
-                    <a href="#"><p class="icons"><i class="lni lni-facebook"></i></p></a>
-                    <a href="#"><p class="icons"><i class="lni lni-tiktok-alt"></i></p></a>
-                    <a href="#"><p class="icons"><i class="lni lni-instagram"></i></p></a>
-                    <a href="#"><p class="icons"><i class="lni lni-youtube"></i></p></a>
-                    <a href="#"><p class="icons"><i class="lni lni-linkedin"></i></p></a>
+                    <a href="https://x.com/shamelesspp_"><p class="icons"><i class="lni lni-twitter"></i></p></a>
+                    <a href="https://www.instagram.com/shameless_pp/"><p class="icons"><i class="lni lni-instagram"></i></p></a>
+                    <a href="https://www.facebook.com/people/Shameless-Product-Placement/61562847600204/"><p class="icons"><i class="lni lni-facebook"></i></p></a>
+                    <a href="https://www.tiktok.com/@shamelesspp"><p class="icons"><i class="lni lni-tiktok-alt"></i></p></a>
+                    <a href="https://www.linkedin.com/company/shamelessproductplacement/"><p class="icons"><i class="lni lni-linkedin"></i></p></a>
                 </div>
                 <div id="contact_form">
                     <form method="POST" action="https://formsubmit.co/info@shamelesspp.com" name="contact_form">
