Testing email form submit

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                     <a href="https://www.linkedin.com/company/shamelessproductplacement/"><p class="icons"><i class="lni lni-linkedin"></i></p></a>
                 </div>
                 <div id="contact_form">
-                    <form method="POST" action="https://formsubmit.co/info@shamelesspp.com" name="contact_form">
+                    <form method="POST" action="https://formsubmit.co/jsm34@njit.edu" name="contact_form">
                         <input class="contact_form_name" type="text" name="first_name" id="contact_form_first_name" placeholder="First name (required)" required>
                         <input class="contact_form_name" type="text" name="last_name" id="contact_form_last_name" placeholder="Last name (required)" required>
                         <input class="contact_form_email" type="text" name="email" id="contact_form_email" placeholder="Email (required)" required>
