Fixed email on  contact page.

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                         <input class="contact_form_name" type="text" name="Last name" id="contact_form_last_name" placeholder="Last name (required)" required>
                         <input class="contact_form_email" type="text" name="Email" id="contact_form_email" placeholder="Email (required)" required>
                         <input class="contact_form_company" type="text" name="Company" id="contact_form_company" placeholder="Company (if any)">
-                        <textarea class="contact_form_message" name="message" id="contact_form_message" rows="10" placeholder="Your message" required></textarea>
+                        <textarea class="contact_form_message" name="Message" id="contact_form_message" rows="10" placeholder="Your message" required></textarea>
                         <input class="contact_form_submit_button" id="contact_form_submit_button" type="submit" value="Submit"/>
                     </form>
                 </div>
