--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             </a>
             <img id="shih_tzu" src="assets/shih_tzu.png" alt="Shih Tzu">
             <img id="shih_zoo_logo" src="assets/shih_zoo_logo.png" alt="Shih Zoo Logo">
-            <img id="download_button_apple" src="assets/download_button_apple.png" alt="Shih Zoo Download">
+            <a href="">
+                <button id="shih_zoo_download_button">Download</button>
+            </a>
             <img id="les_dudes_coming_soon" src="assets/les_dudes_coming_soon.png" alt="Les Dudes Coming Soon">
         </div>
         <script src="menu.js"></script>
