--- a/partner.html
+++ b/partner.html
@@ -44,10 +44,10 @@
                         <p id="partner_details_part_1">
                             Are you ready to revolutionize the gaming industry? At Shameless Product Placement, we are on a mission to redefine the gaming experience, and we're looking for partners who share our vision and passion. We thrive on pushing boundaries and exploring new frontiers in gaming technology. From immersive storytelling to cutting-edge graphics and gameplay mechanics, we're dedicated to creating unforgettable gaming experiences that captivate the worldwide audience. Collaboration is at the heart of everything we do. We believe that the best games are born from diverse perspectives and collective creativity. By partnering with us, you'll be joining a dynamic team that values your input and expertise every step of the way.
                         </p>
-                        <img id="partner_example_1" src="assets/example_image.png" alt="Sponsor Example 1">
+                        <img id="partner_example_1" src="assets/partner_example_1.png" alt="Sponsor Example 1">
                     </div>
                     <div class="partner_information_part_2">
-                        <img id="partner_example_2" src="assets/example_image.png" alt="Sponsor Example 2">
+                        <img id="partner_example_2" src="assets/partner_example_2.png" alt="Sponsor Example 2">
                         <p id="partner_details_part_2">
                             As a start-up game developer, we offer partners the opportunity to be a part of something truly special from the ground up. With our innovative ideas and your unique skills and resources, the possibilities are endless. Together, we can shape the future of gaming and leave a lasting impact on the industry. Whether you're a publisher, technology provider, or creative collaborator, we want to hear from you. We can market your game for you, and add our little Shameless Product Placement spin on it to make you money!
                         </p>
