--- a/index.html
+++ b/index.html
@@ -30,20 +30,43 @@
             </div>
         </header>
         <div class="content">
-            <a href="index.html">
-                <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
-            </a>
-            <a href="#">
-                <img id="shih_zoo_merchandise" src="assets/shih_zoo_merchandise_icon.png" alt="Shih Zoo Merchandise">
-            </a>
-            <img id="shih_tzu" src="assets/shih_tzu.png" alt="Shih Tzu">
-            <img id="shih_zoo_logo" src="assets/shih_zoo_logo.png" alt="Shih Zoo Logo">
-            <a href="">
-                <button id="shih_zoo_download_button">Download</button>
-            </a>
-            <img id="les_dudes_coming_soon" src="assets/les_dudes_coming_soon.png" alt="Les Dudes Coming Soon">
+            <div id="blurrable_section">
+                <a href="index.html">
+                    <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
+                </a>
+                <a href="#">
+                    <img id="shih_zoo_merchandise" src="assets/shih_zoo_merchandise_icon.png" alt="Shih Zoo Merchandise">
+                </a>
+                <img id="shih_tzu" src="assets/shih_tzu.png" alt="Shih Tzu">
+                <img id="shih_zoo_logo" src="assets/shih_zoo_logo.png" alt="Shih Zoo Logo">
+                <button onclick="openDownloadPopup()" id="shih_zoo_download_button">Download</button>
+                <img id="les_dudes_coming_soon" src="assets/les_dudes_coming_soon.png" alt="Les Dudes Coming Soon">
+            </div>
+            <div id="shih_zoo_download_popup">
+                <div id="shih_zoo_download_popup_close">
+                    <button onclick="closeDownloadPopup()" id="shih_zoo_download_popup_close_button" type="button" class="close">×</button>
+                </div>
+                <div id="shih_zoo_download_popup_header">
+                    <img id="shih_zoo_app_logo" src="assets/shih_zoo_logo.png" alt="Shih Zoo App Logo">
+                    <div id="shih_zoo_download_popup_header_text">
+                        <p id="shih_zoo_download_title">Shih Zoo</p>
+                        <p id="shih_zoo_download_text">A compelling story game that allows you to explore the Shih Zoo as a cutesy shih tzu!</p>
+                    </div>
+                </div>
+                <hr id="shih_zoo_download_popup_separator">
+                <p id="shih_zoo_download_available_text">Available on:</p>
+                <div id="shih_zoo_download_button_section">
+                    <a href="#" class="shih_zoo_download_button_links">
+                        <img class="shih_zoo_download_buttons" id="shih_zoo_download_button_app_store" src="assets/download_button_app_store.png" alt="Shih Zoo App Store Download">
+                    </a>
+                    <a href="#" class="shih_zoo_download_button_links">
+                        <img class="shih_zoo_download_buttons" id="shih_zoo_download_button_google_play" src="assets/download_button_google_play.png" alt="Shih Zoo Google Play Download">
+                    </a>
+                </div>
+            </div>
         </div>
         <script src="menu.js"></script>
+        <script src="download_popup.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body>
 </html>
