--- a/investor.html
+++ b/investor.html
@@ -69,7 +69,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1>Invest in Shameless Product Placement!</h1>
-                        <button type="button" class="close" data-dismiss="modal">×</button>
+                        <button id="projects_menu_close_button" type="button" class="close" data-dismiss="modal">×</button>
                     </div>
                     <div class="modal-body">
                         <div class="projects_menu_options">
