--- a/sponsor.html
+++ b/sponsor.html
@@ -61,7 +61,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1>Invest in Shameless Product Placement!</h1>
-                        <button type="button" class="close" data-dismiss="modal">×</button>
+                        <button id="sponsor_options_menu_close_button" type="button" class="close" data-dismiss="modal">×</button>
                     </div>
                     <div class="modal-body">
                         <div class="sponsor_options_menu_options">
