Fixed mobile formatting of consumer landing page (hopefully)

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
                 <a href="home.html">
                     <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
                 </a>
-                <p id="home_text">We shamelessly promote.</p>
+                <p id="home_text">Welcome to Shameless Product Placement, where world class gaming intersects with brand promotion!</p>
                 <div class="scroll">
                     <a id="scroll" href="#scrollable_area"><img id="down_arrow" src="assets/down_arrow.png" alt="Down Arrow"></a>
                 </div>
@@ -45,11 +45,31 @@
                     <div class="description_section">
                         <p class="section_titles">What is Shameless Product Placement?</p>
                         <div class="description">
-                            <p>Shameless Product Placement is the newest, most revolutionary step in advertisement! We work with advertisers and allow them to place virtual advertisements fully integrated within our game, completely eliminating the ideology that advertisements are "to be skipped" if they are a core part of the game! We work with game developers who want to add a source of revenue into their game, by adding virtual advertising to it!</p>
+                            <p>Video games are stepping up to fill the entertainment void left by uninspired traditional TV programming and repetitive live sports that no longer captivate fans as they once did. People of all ages are seeking more interactive and engaging entertainment experiences. They're tired of simply watching—they want to be part of the story! They want to "be the ball"! They crave alternative storylines, lovable characters, social interactions, and competitive gameplay. Our adventure is just beginning. Join us— the best is yet to come!</p>
+                        </div>
+                    </div>
+                    <div class="serve_section">
+                        <p class="section_titles">We Serve</p>
+                        <div class="serve">
+                            <div class="serve_gamers">
+                                <a href="index.html">
+                                    <button class="serve_buttons">GAMERS</button>
+                                </a>
+                            </div>
+                            <div class="serve_brands">
+                                <a href="sponsor.html">
+                                    <button class="serve_buttons">BRANDS / SPONSORS</button>
+                                </a>
+                            </div>
+                            <div class="serve_developers">
+                                <a href="partner.html">
+                                    <button class="serve_buttons">GAME DEVELOPERS</button>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="team_section">
-                        <p class="section_titles">Who are we?</p>
+                        <p class="section_titles">The Shameless Team</p>
                         <div class="people">
                             <img class="people_images" id="founder" src="assets/charles_conlan.png" alt="Charles J. Conlan">
                             <div class="founder_information">
@@ -64,7 +84,7 @@
                             <div class="business_advisor_information">
                                 <p class="name_titles" id="business_advisor_name">Business Advisor Joe Conlan</p>
                                 <p class="section_information" id="business_advisor_information">
-                                    Insert paragraph written by Joe Conlan here! We will add more staff members below depending on if they want to be on the site or not!
+                                    Insert paragraph written by Joe Conlan here! We will add more staff members above depending on if they want to be on the site or not!
                                 </p>
                             </div>
                         </div>
