Added scrolling text to consumer landing page. Changed home page.

--- a/home.html
+++ b/home.html
@@ -50,42 +50,72 @@
                     </div>
                     <div class="serve_section">
                         <p class="section_titles">We Serve</p>
-                        <div class="serve">
+                        <div class="serve_header">
+                            <p class="serve_text">Our business serves</p>
+                            <a class="serve_button_links" href="index.html"><p class="serve_buttons">gamers</p></a>
+                            <p class="serve_text">,</p>
+                            <a class="serve_button_links" href="sponsor.html"><p class="serve_buttons"> brands / sponsors</p></a>
+                            <p class="serve_text">, and </p>
+                            <a class="serve_button_links" href="partner.html"><p class="serve_buttons"> game developers.</p></a>
+                        </div>
+                        <div class="serve_information">
                             <div class="serve_gamers">
-                                <a href="index.html">
-                                    <button class="serve_buttons">GAMERS</button>
-                                </a>
+                                <img class="serve_images" src="assets/serve_gamers_icon.png" alt="Gamers Icon">
+                                <ul>
+                                    <li class="serve_description">We make great games!</li>
+                                    <li class="serve_description">We make great games!</li>
+                                    <li class="serve_description">We make great games!</li>
+                                </ul>
                             </div>
                             <div class="serve_brands">
-                                <a href="sponsor.html">
-                                    <button class="serve_buttons">BRANDS / SPONSORS</button>
-                                </a>
+                                <img class="serve_images" src="assets/serve_brands_icon.png" alt="Brands / Sponsors Icon">
+                                <ul>
+                                    <li class="serve_description">We take sponsors!</li>
+                                    <li class="serve_description">We take sponsors!</li>
+                                    <li class="serve_description">We take sponsors!</li>
+                                </ul>
                             </div>
                             <div class="serve_developers">
-                                <a href="partner.html">
-                                    <button class="serve_buttons">GAME DEVELOPERS</button>
-                                </a>
+                                <img class="serve_images" src="assets/serve_developers_icon.png" alt="Game Developers Icon">
+                                <ul>
+                                    <li class="serve_description">We partner up with developers!</li>
+                                    <li class="serve_description">We partner up with developers!</li>
+                                    <li class="serve_description">We partner up with developers!</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                     <div class="team_section">
                         <p class="section_titles">The Shameless Team</p>
+                        <div class="team_social_media">
+                            <a href="https://x.com/shamelesspp_"><p class="team_social_media_icons"><i class="lni lni-twitter"></i></p></a>
+                            <a href="https://www.instagram.com/shameless_pp/"><p class="team_social_media_icons"><i class="lni lni-instagram"></i></p></a>
+                            <a href="https://www.facebook.com/people/Shameless-Product-Placement/61562847600204/"><p class="team_social_media_icons"><i class="lni lni-facebook"></i></p></a>
+                            <a href="https://www.tiktok.com/@shamelesspp"><p class="team_social_media_icons"><i class="lni lni-tiktok-alt"></i></p></a>
+                            <a href="https://www.linkedin.com/company/shamelessproductplacement/"><p class="team_social_media_icons"><i class="lni lni-linkedin"></i></p></a>
+                        </div>
                         <div class="people">
                             <img class="people_images" id="founder" src="assets/charles_conlan.png" alt="Charles J. Conlan">
                             <div class="founder_information">
                                 <p class="name_titles" id="founder_name">Founder Charles J. Conlan</p>
-                                <p class="section_information" id="founder_information">
-                                    Insert paragraph written by Charles J. Conlan here!
-                                </p>
+                                <div class="information_section">
+                                    <p class="information_text" id="founder_information">
+                                        Insert paragraph written by Charles J. Conlan here!
+                                    </p>
+                                    <a href="#"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                </div>
                             </div>
                         </div>
                         <div class="people">
                             <img class="people_images" id="business_advisor" src="assets/joe_conlan.png" alt="Joe Conlan">
                             <div class="business_advisor_information">
                                 <p class="name_titles" id="business_advisor_name">Business Advisor Joe Conlan</p>
-                                <p class="section_information" id="business_advisor_information">
-                                    Insert paragraph written by Joe Conlan here! We will add more staff members above depending on if they want to be on the site or not!
-                                </p>
+                                <div class="information_section">
+                                    <p class="information_text" id="business_advisor_information">
+                                        Insert paragraph written by Joe Conlan here! We will add more staff members above depending on if they want to be on the site or not!
+                                    </p>
+                                    <a href="#"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                </div>
                             </div>
                         </div>
                     </div>
