--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="icon" href="assets/shih_zoo_icon.png">
         <link rel="stylesheet" href="menu.css">
         <link rel="stylesheet" href="consumer.css">
+        <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <title>Shameless Product Placement</title>
     </head>
@@ -31,6 +32,10 @@
         </header>
         <div class="content">
             <div id="blurrable_section">
+                <div class="scrolling_area">
+                    <p class="scrolling_text">Come visit the Shih Zoo, the home of the best Shih in the world! Come visit the Shih Zoo, the home of the best Shih in the world! </p>
+                    <p class="scrolling_text">Come visit the Shih Zoo, the home of the best Shih in the world! Come visit the Shih Zoo, the home of the best Shih in the world! </p>
+                </div>
                 <a href="index.html">
                     <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
                 </a>
@@ -41,6 +46,13 @@
                 <img id="shih_zoo_logo" src="assets/shih_zoo_logo.png" alt="Shih Zoo Logo">
                 <button onclick="openDownloadPopup()" id="shih_zoo_download_button">Download</button>
                 <img id="les_dudes_coming_soon" src="assets/les_dudes_coming_soon.png" alt="Les Dudes Coming Soon">
+                <div class="consumer_social_media">
+                    <a href="https://x.com/shamelesspp_"><p class="consumer_social_media_icons"><i class="lni lni-twitter"></i></p></a>
+                    <a href="https://www.instagram.com/shameless_pp/"><p class="consumer_social_media_icons"><i class="lni lni-instagram"></i></p></a>
+                    <a href="https://www.facebook.com/people/Shameless-Product-Placement/61562847600204/"><p class="consumer_social_media_icons"><i class="lni lni-facebook"></i></p></a>
+                    <a href="https://www.tiktok.com/@shamelesspp"><p class="consumer_social_media_icons"><i class="lni lni-tiktok-alt"></i></p></a>
+                    <a href="https://www.linkedin.com/company/shamelessproductplacement/"><p class="consumer_social_media_icons"><i class="lni lni-linkedin"></i></p></a>
+                </div>
             </div>
             <div id="shih_zoo_download_popup">
                 <div id="shih_zoo_download_popup_close">
